tests/optional/optional.exp

nullable.js:17:5,7: null
This type is incompatible with
nullable.js:17:5,9: number

nullable.js:17:5,7: undefined
This type is incompatible with
nullable.js:17:5,9: number

nullable.js:23:5,7: null
This type is incompatible with
nullable.js:23:5,9: number

nullable.js:23:5,7: undefined
This type is incompatible with
nullable.js:23:5,9: number

nullable.js:29:5,7: null
This type is incompatible with
nullable.js:29:5,9: number

nullable.js:29:5,7: undefined
This type is incompatible with
nullable.js:29:5,9: number

nullable.js:35:5,7: null
This type is incompatible with
nullable.js:35:5,9: number

nullable.js:35:5,7: undefined
This type is incompatible with
nullable.js:35:5,9: number

optional.js:1:23,23: undefined
This type is incompatible with
optional.js:1:23,27: number

optional.js:7:14,14: parameter `x`
Missing annotation

optional.js:7:27,27: element of rest parameter `y`
Missing annotation

optional.js:7:39,44: function call
Error:
optional.js:7:43,43: string
This type is incompatible with
optional.js:4:13,18: number

optional.js:9:1,8: function call
Error:
optional.js:9:7,7: number
This type is incompatible with
optional.js:7:30,35: string

optional.js:10:1,17: function call
Error:
optional.js:10:14,15: number
This type is incompatible with
optional.js:7:30,35: string

optional_param2.js:7:31,32: undefined
This type is incompatible with
optional_param2.js:7:9,14: number

optional_param4.js:12:1,9: function call
Error:
optional_param4.js:12:5,8: boolean
This type is incompatible with
optional_param4.js:3:18,23: number

optional_param4.js:13:1,14: function call
Error:
optional_param4.js:13:10,13: boolean
This type is incompatible with
optional_param4.js:3:38,43: string

undefined.js:8:14,17: property `duck`
Property cannot be accessed on possibly undefined value
undefined.js:8:12,12: undefined

undefined2.js:8:14,17: property `duck`
Property cannot be accessed on possibly undefined value
undefined2.js:8:12,12: undefined

Found 19 errors
